--- a/testapp/pubspec.yaml
+++ b/testapp/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^4.3.0
+  http: ^0.12.1
+  qr_flutter: 3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
